--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 </head>
 <body>
 
-  <h1>YourGTPS</h1>
+  <h1>Crown PS</h1>
 
   <div class="box">
-    <p><strong>YourGTPS</strong> is one of the best Growtopia Private Servers with premium features, frequent updates, and an active community. Join us and feel the fun!</p>
+    <p><strong>Crown PS</strong> is one of the best Growtopia Private Servers with premium features, frequent updates, and an active community. Join us and feel the fun!</p>
   </div>
 
   <div class="box">
