--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
   <div class="link-box">
     <h2>PowerTunnel</h2>
     <p><a href="https://gtps.host/Moon.txt" target="_blank">https://gtps.host/Moon.txt</a></p>
+    <button class="button" onclick="copyPowerTunnelLink()">Copy PowerTunnel Link</button>
+    <p class="copied" id="copiedMessagePowerTunnel">✔ Link copied to clipboard!</p>
   </div>
 
   <!-- Vhost Box -->
@@ -176,6 +178,15 @@ www.growtopia2.com = 91.134.85.13`;
     function copyMacHost() {
       navigator.clipboard.writeText(hostText).then(() => {
         const msg = document.getElementById("copiedMessage3");
+        msg.style.display = "block";
+        setTimeout(() => msg.style.display = "none", 2000);
+      });
+    }
+
+    function copyPowerTunnelLink() {
+      const powerTunnelLink = "https://gtps.host/Moon.txt";
+      navigator.clipboard.writeText(powerTunnelLink).then(() => {
+        const msg = document.getElementById("copiedMessagePowerTunnel");
         msg.style.display = "block";
         setTimeout(() => msg.style.display = "none", 2000);
       });
