--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <!-- PowerTunnel Box -->
   <div class="link-box">
     <h2>PowerTunnel</h2>
-    <p><a href="https://gtps.host/Moon.txt" target="_blank">https://gtps.host/Moon.txt</a></p>
+    <p><!-- removed the link text here to keep it clean --></p>
     <button class="button" onclick="copyPowerTunnelLink()">Copy PowerTunnel Link</button>
     <p class="copied" id="copiedMessagePowerTunnel">✔ Link copied to clipboard!</p>
   </div>
