--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       margin: 10px 0;
       font-size: 1.5em;
       user-select: none;
-      color: #33ff33; /* VERDE DESCHIS constant */
+      color: #33ff33; /* verde deschis constant */
     }
   </style>
 </head>
@@ -82,23 +82,7 @@
   <h1 id="pageTitle">Crown PS</h1>
 
   <div class="box">
-    <p><strong>Crown PS</strong> is one of the best Growtopia Private Servers with premium features, frequent updates, and an active community. Join us and feel the fun!</p>
-  </div>
-
-  <div class="box">
     <p class="status" id="serverStatus">Server Status: ONLINE</p>
-
-    <button class="button">
-      <a href="https://example.com/vhost" target="_blank">Download VHOST</a>
-    </button>
-
-    <button class="button">
-      <a href="https://example.com/ptunnel.apk" target="_blank">Copy PTUNNEL (Android)</a>
-    </button>
-
-    <button class="button">
-      <a href="https://example.com/windows" target="_blank">Copy WINDOWS</a>
-    </button>
   </div>
 
   <div class="link-box">
@@ -111,7 +95,7 @@
     <h2>Vhost</h2>
     <p>You can download the VHOST hosts file below:</p>
     <a href="moonps.txt" download>
-      <button class="button">Download moonps.txt</button>
+      <button class="button">Download Virtual Host</button>
     </a>
   </div>
 
