--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Server Status: OFFLINE</title>
+  <title>Server Status: ONLINE</title>
   <style>
     body {
       margin: 0;
-      background-color: #255;
+      background-color: #180;
       font-family: Arial, sans-serif;
       color: white;
       text-align: center;
@@ -199,4 +199,5 @@ www.growtopia2.com = 91.134.85.13`;
 
 </body>
 </html>
+
 
