--- a/index.html
+++ b/index.html
@@ -90,14 +90,10 @@
     <button class="button" onclick="copyPowerTunnel()">Copy Link</button>
     <p class="copied" id="copiedMessage0">✔ Copied to clipboard!</p>
   </div>
-
-  <div class="link-box">
-    <h2>Vhost</h2>
-    <p>You can download the VHOST hosts file below:</p>
-    <a href="moonps.txt" download>
-      <button class="button">Download Virtual Host</button>
-    </a>
-  </div>
+  
+<a href="crownps.txt" download>
+  <button class="button">Download Virtual Host</button>
+</a>
 
   <div class="link-box">
     <h2>iOS Host (Surge 5)</h2>
@@ -199,5 +195,6 @@ www.growtopia2.com = 91.134.85.13`;
 
 </body>
 </html>
+
 
 
