--- a/index.html
+++ b/index.html
@@ -90,10 +90,14 @@
     <button class="button" onclick="copyPowerTunnel()">Copy Link</button>
     <p class="copied" id="copiedMessage0">✔ Copied to clipboard!</p>
   </div>
-  
-<a href="crownps.txt" download>
-  <button class="button">Download Virtual Host</button>
-</a>
+
+  <div class="link-box">
+  <h2>Virtual Host</h2>
+  <p>You can download the Virtual Host file below:</p>
+  <a href="moonps.txt" download>
+    <button class="button">Download Virtual Host</button>
+  </a>
+  </div>
 
   <div class="link-box">
     <h2>iOS Host (Surge 5)</h2>
@@ -195,6 +199,7 @@ www.growtopia2.com = 91.134.85.13`;
 
 </body>
 </html>
+
 
 
 
