--- a/index.html
+++ b/index.html
@@ -3,15 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Server Status: ONLINE</title>
+  <title>Server Status: OFFLINE</title>
   <style>
     body {
-      margin: 0;
       background-color: #000;
-      font-family: Arial, sans-serif;
       color: white;
+      font-family: Arial, sans-serif;
       text-align: center;
+      margin: 0;
+      padding: 50px;
     }
+
+    .status {
+      font-size: 2em;
+      font-weight: bold;
+      color: #ff3333; /* roșu deschis */
+      user-select: none;
+    }
+  </style>
+</head>
+<body>
+
+  <p class="status">Server Status: OFFLINE</p>
+
+</body>
+</html>
 
     h1 {
       font-size: 2.5em;
@@ -199,6 +215,7 @@ www.growtopia2.com = 91.134.85.13`;
 
 </body>
 </html>
+
 
 
 
